feat: add openapi and handlers
